# lrar

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: main.yml
backend/: Cargo.toml  Dockerfile  README.md  diesel.toml  insert_tenants.sql  populate_db.sql
backend/migrations/2024-10-29-145404_create_tenants/: up.sql
backend/migrations/2024-11-20-173954_create-tenant-table/: up.sql
backend/migrations/2024-11-25-145043_create-burn-table/: down.sql  up.sql
backend/migrations/2025-02-07-094642_create_notes/: up.sql
backend/migrations/2025-02-24-150001_add_current_burn_count/: down.sql  up.sql
backend/src/: db.rs  endpoints.rs  lib.rs  main.rs  models.rs  schema.rs  tenants.rs  utils.rs
diesel/: Dockerfile
frontend/: Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json  vite.config.ts
frontend/config/: vite.config.ts
frontend/src/: App.vue  App_lrar.vue  main.ts  store.ts
frontend/src/components/: BurnFormComponent.vue  BurnTableComponent.vue  CoffeeTrainComponent.vue  HeaderComponent.vue  HelloWorld.vue  HomePage.vue  NoteBoardComponent.vue  NoteFormComponent.vue  TenantBurnHistoryComponent.vue  TenantComponent.vue  TenantFormComponent.vue
frontend/src/router/: index.ts
frontend/src/views/: TenantView.vue
