[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
rusqlite = "0.32.1"
diesel = { version = "2.2.4", features = ["sqlite"] }
dotenvy = "0.15.7"
serde_json = "1.0.128"
diesel_migrations = "2.2.0"


