[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
actix-multipart = "0.6"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
diesel_migrations = "2.0.0"
serde_json = "1.0"
r2d2 = "0.8.9"
env_logger = "0.10"
actix-files = "0.6"
chrono = { version = "0.4", features = ["serde"] }
